--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+  <div class="field">
+    <%= f.label :video %><br>
+    <%= f.file_field :video %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
